# trullo-rs

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  README.md  test.sql
assets/: tailwind.css
src/: api.rs  app.rs  db.rs  main.rs  mikrotik.rs  windtre.rs
src/backend/: db.rs  mikrotik.rs  mod.rs  scheduler.rs  windtre.rs
src/components/: data_status_card.rs  gauge.rs  mod.rs  usage_chart_view.rs
src/shared/: types.rs
src/utils/: format.rs
