[package]
name = "trullo-rs"
version = "0.1.0"
authors = ["patte <p@tte.io>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["router", "fullstack"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
js-sys = { version = "0.3", optional = true }
wasm-bindgen = { version = "0.2", optional = true }

# Server-only dependencies are optional and enabled via the `server` feature
tokio = { version = "1", features = [
  "rt-multi-thread",
  "macros",
  "time",
], optional = true }
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
], optional = true }
sqlx = { version = "0.7", default-features = false, features = [
  "sqlite",
  "runtime-tokio-rustls",
  "macros",
], optional = true }
chrono = { version = "0.4", features = ["serde", "clock"], optional = true }
once_cell = { version = "1.19", optional = true }
dotenvy = { version = "0.15", optional = true }
anyhow = { version = "1.0", optional = true }
base64 = { version = "0.22", optional = true }
regex = { version = "1", optional = true }
rand = { version = "0.8", features = ["std", "std_rng"], optional = true }
tracing-subscriber = { version = "0.3.20", features = [
  "env-filter",
], optional = true }
futures = { version = "0.3.31", optional = true }

[features]
default = []
web = ["dioxus/web", "dep:js-sys", "dep:wasm-bindgen"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = [
  "dioxus/server",
  "dep:tokio",
  "dep:reqwest",
  "dep:sqlx",
  "dep:chrono",
  "dep:once_cell",
  "dep:dotenvy",
  "dep:anyhow",
  "dep:base64",
  "dep:regex",
  "dep:rand",
  "dep:tracing-subscriber",
  "dep:futures",
]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
